--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,7 +19,7 @@
     <!--Use the header area for the website name and a Photograph-->
     <header>
         <figure>
-            <img src="Portfolio/images/aaron_photo.JPG" alt="Aaron's photo">
+            <img src="ajazzar.github.io/Portfolio/images/aaron_photo.JPG" alt="Aaron's photo">
             <figcaption><h1>Aaron Jazzar, Web Developer</h1></figcaption>
         </figure>
     </header>
