--- a/Portfolio/developer.html
+++ b/Portfolio/developer.html
@@ -19,7 +19,7 @@
     <!--Use the header area for the website name or logo-->
     <header>
         <figure>
-            <img src="images/aaron_photo.jpg" alt="Aaron's photo">
+            <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="Aaron's photo">
             <figcaption><h1>Aaron Jazzar, Web Developer</h1></figcaption>
         </figure>
     </header>
