--- a/Portfolio/developer.html
+++ b/Portfolio/developer.html
@@ -45,7 +45,7 @@
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="images/js-clock.png" target="_blank"><img src="images/js-clock.png" alt="JavaScript analog clock"></a>
+                        <a href="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/ab1b8d8e501d951c6c436048879897047acaba4d/Portfolio/images/js-clock.png" target="_blank"><img src="images/js-clock.png" alt="JavaScript analog clock"></a>
                         <a href="images/js-typing.png" target="_blank"><img src="images/js-typing.png" alt="JavaScript typing speed tester"></a>
                         <figcaption>I completed the Learning Path "Become a Front-End Web Developer" on the LinkedIn Learning website in August 2020. I made an Analog Clock and a Typing Speed Tester using the scripting language JavaScript as part of the "JavaScript Essential Training" course.</figcaption>
                     </figure>
