--- a/Portfolio/multipage.html
+++ b/Portfolio/multipage.html
@@ -12,11 +12,11 @@
     <meta charset="utf-8">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
-    <script src="scripts/jquery-1.8.3.min.js"></script>
-    <script src="scripts/jquery.mobile-1.3.1.min.js"></script>
-    <script src="scripts/chromeFileProtocolFix.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css2/jquery.mobile-1.3.1.min.css" />
+    <script src="scripts2/jquery-1.8.3.min.js"></script>
+    <script src="scripts2/jquery.mobile-1.3.1.min.js"></script>
+    <script src="scripts2/chromeFileProtocolFix.js"></script>
+    <link rel="stylesheet" href="css2/styles.css" />
 </head>
 
 <body>
