--- a/Portfolio/dice.html
+++ b/Portfolio/dice.html
@@ -11,12 +11,12 @@
 		 <div class="row" align="center">
  			 <div class="col-3">
  				 <h2>Your Dice</h2>
- 				 <img src="images/d1.png" id="mydice1">
+ 				 <img src="images3/d1.png" id="mydice1">
                   <img src="images/d1.png" id="mydice2"><br>
                   <div id="result1">&nbsp;</div>
  				 <h2>Computer's Dice</h2>
- 				 <img src="images/e1.png" id="hisdice1">
- 				 <img src="images/e1.png" id="hisdice2">
+ 				 <img src="images3/e1.png" id="hisdice1">
+ 				 <img src="images3/e1.png" id="hisdice2">
                   <div id="enemy_score"></div><br>
                   <div id="result2">&nbsp;</div>
  			 </div>
@@ -32,7 +32,7 @@
  			 </div>
  			 <div class="col-3">
  				 <br><br>
- 				 <img src="images/good-luck.gif" id="message" alt="Good Luck!"/>
+ 				 <img src="images3/good-luck.gif" id="message" alt="Good Luck!"/>
  			 </div>
  			 <div class="col-3" align="center">
  				 <h2>High Scores</h2>
