--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -27,9 +27,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="developer.html">Work</a></li>
-            <li><a href="references.html">References</a></li>
+            <li><a href="dice.html">JavaScript</a></li>
+            <li><a href="landscape.php">PHP</a></li>
+            <li><a href="multipage.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
