--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="dice.html">JavaScript</a></li>
-            <li><a href="cookies2.html">PHP</a></li>
+            <li><a href="cookies.html">PHP</a></li>
             <li><a href="multipage.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
