--- a/Portfolio/dice.html
+++ b/Portfolio/dice.html
@@ -6,7 +6,7 @@
  		 <link rel="stylesheet" type="text/css" href="style.css">
  		 <meta name="description" content="Play a fun dice game. Try your luck and get on the highscore list!">
  	 </head>
-	<a href="ajazzar.github.io/Portfolio">Click here to return to my Portfolio.</a>
+	<a href="index.html">Click here to return to my Portfolio.</a>
  	 <body onload="get_scores(list_scores)">
  		 <h1 align="center">JavaScript Dice Game Version 2</h1>
 		 <div class="row" align="center">
