--- a/Portfolio/multipage.html
+++ b/Portfolio/multipage.html
@@ -185,20 +185,20 @@
     </div>
 
 
-    <script src="scripts/pageLoader.js"></script>
-    <script src="scripts/access.js"></script>
-    <script src="scripts/boiler.js"></script>
+    <script src="scripts2/pageLoader.js"></script>
+    <script src="scripts2/access.js"></script>
+    <script src="scripts2/boiler.js"></script>
 
-    <script src="scripts/table.js"></script>
-    <script src="scripts/Advice.js"></script>
+    <script src="scripts2/table.js"></script>
+    <script src="scripts2/Advice.js"></script>
 
-    <script src="scripts/GraphAnimate.js"></script>
-    <script src="scripts/RGraph.common.core.js"></script>
-    <script src="scripts/RGraph.common.dynamic.js"></script>
-    <script src="scripts/RGraph.common.effects.js"></script>
-    <script src="scripts/RGraph.cornergauge.js"></script>
-    <script src="scripts/RGraph.hprogress.js"></script>
-    <script src="scripts/RGraph.line.js"></script>
+    <script src="scripts2/GraphAnimate.js"></script>
+    <script src="scripts2/RGraph.common.core.js"></script>
+    <script src="scripts2/RGraph.common.dynamic.js"></script>
+    <script src="scripts2/RGraph.common.effects.js"></script>
+    <script src="scripts2/RGraph.cornergauge.js"></script>
+    <script src="scripts2/RGraph.hprogress.js"></script>
+    <script src="scripts2/RGraph.line.js"></script>
 </body>
 
 </html>
