--- a/Portfolio/multipage.html
+++ b/Portfolio/multipage.html
@@ -62,6 +62,7 @@
             <a href="#pageGraph" data-role="button">Graph</a>
             <a href="#pageAdvice" data-role="button">Advice</a>
         </div>
+        <a href="index.html">Return back to my Portfolio</a>
     </div>
     <div data-role="page" id="pageUserInfo">
         <div data-role="header">
