--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -25,12 +25,12 @@
     </header>
 
     <!--Use the nav area to add hyperlinks to other pages within the website-->
-    <nav>
+   <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="developer.html">Work</a></li>
-            <li><a href="references.html">References</a></li>
+            <li><a href="dice.html">JavaScript</a></li>
+            <li><a href="cookies.html">PHP</a></li>
+            <li><a href="multipage.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -39,7 +39,7 @@
     <main>
         <div id="contact">
             <div id="info">
-                <h2>Contact Info</h2>
+                <h2>Aaron's Contact Info</h2>
                 <p class="tel-link mobile"><a href="tel:7044410644">(704) 441-0644</a></p>
                 <p class="tablet-desktop">(704) 441-0644</p>
                     <p>Email: <a href="mailto:ajazzar001@my.wilmu.edu" class="contact-email-link">ajazzar001@my.wilmu.edu</a></p>
