--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -39,17 +39,16 @@
         <article>
             <div id="home">
                 <h2>Home</h2>
-                    <h3>I have almost 5 years of work experience with Walmart. (See my <a href="about.html" class="action">About</a> and <a href="references.html" class="action">References</a> pages)</h3>     
-                    <h3>I completed "UX & Web Design Master Course: Strategy, Design, Development" on the Udemy website and "Become a Front-End Web Developer" path on the LinkedIn Learning website. (See my <a href="developer.html" class="action">Work</a> page)</h3>
-                    <h3>I am now enrolled in the Web Applications Development certificate program at Wilmington University in Delaware.</h3>   
+                    <h3>I have 5 years of work experience with Walmart.</h3>     
+                    <h3>I just completed the Web Applications Development certificate at Wilmington University.</h3>
+                    <h3>I now desire to be employed as a Web Developer.</h3>
             </div>  
     </article>
     </main>
 
     <!--Use the footer area to add webpage footer content-->
     <footer>
-        <p>email: <a href="mailto:ajazzar001@my.wilmu.edu">ajazzar001@my.wilmu.edu</a></p>
-        <p>&copy; Copyright 2020. All Rights Reserved. The information on this website is confidential.</p>
+        <p>&copy; Copyright 2021. All Rights Reserved. The information on this website is confidential.</p>
     </footer>
 
 </div>
