--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Student Name: Aaron Jazzar 
-     File Name: developer.html 
-     Date: 10/18/2020-->
+     File Name: JavaScript.html
+     Date: 09/02/2021-->
 <html lang="en">
 <head>
     <title>Work</title>
@@ -19,7 +19,7 @@
     <!--Use the header area for the website name or logo-->
     <header>
         <figure>
-            <img src="images/aaron_photo.jpg" alt="Aaron's photo">
+            <img src="https://raw.githubusercontent.com/ajazzar/ajazzar.github.io/main/Portfolio/images/aaron_photo.JPG" alt="Aaron's photo">
             <figcaption><h1>Aaron Jazzar, Web Developer</h1></figcaption>
         </figure>
     </header>
@@ -28,9 +28,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="developer.html">Work</a></li>
-            <li><a href="references.html">References</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="PHP.html">PHP</a></li>
+            <li><a href="MobileApp.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -45,25 +45,23 @@
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="images/js-clock.png" target="_blank"><img src="images/js-clock.png" alt="JavaScript analog clock"></a>
-                        <a href="images/js-typing.png" target="_blank"><img src="images/js-typing.png" alt="JavaScript typing speed tester"></a>
-                        <figcaption>I completed the Learning Path "Become a Front-End Web Developer" on the LinkedIn Learning website in August 2020. I made an Analog Clock and a Typing Speed Tester using the scripting language JavaScript as part of the "JavaScript Essential Training" course.</figcaption>
+                        <a href="dice.html" target="_blank"><img src="dice.html" alt="Dice Game"></a>
+                        <figcaption>I made a Dice game.</figcaption>
                     </figure>
             
                     <figure>
-                        <a href="images/jq-products.png" target="_blank"><img src="images/jq-products.png"  alt="jQuery array of products"></a>
-                        <a href="images/jq-description.png" target="_blank"><img src="images/jq-description.png" alt="jQuery product description"></a>
-                        <figcaption>I organized products into categories and added product descriptions in the "jQuery Essential Training" course. In order to add a description to each product, I had to use AJAX which stands for Asynchronous JavaScript and XML.</figcaption>
+                        <a href="sign_in3.html" target="_blank"><img src="sign_in3.html"  alt="Sign In form"></a>
+                        <figcaption>I made a JavaScript sign-in form.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="images/react.jpg" target="_blank"><img src="images/react.jpg" alt="my Certificate for completing the React.js course"></a>
-                        <figcaption>I took a 1-hour Course on React.js, which is the JavaScript framework for building modular, reusable user interface components.</figcaption>
+                        <a href="soccer.html" target="_blank"><img src="soccer.html" alt="form to add soccer players"></a>
+                        <figcaption>I created a form that can be used to add children to Soccer teams depending on age groups.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="images/udemy.jpg" target="_blank"><img src="images/udemy.jpg" alt="my Web Design Certificate"></a>
-                        <figcaption>In December 2019, I completed "UX & Web Design Master Course: Strategy, Design, Development" on the Udemy website. I learned about HTML and CSS. I used WordPress and WooCommerce to make a Blog website and an eCommerce website.</figcaption>
+                        <a href="blastoff.html" target="_blank"><img src="blastoff.html" alt="Rocket Blastoff"></a>
+                        <figcaption>I created a button on a web page that can be clicked. After it is clicked, there is a countdown and then the word "blastoff!" is shown.</figcaption>
                     </figure>
             
         </div>
