--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -45,22 +45,22 @@
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="dice.html" target="_blank"><img src="dice.html" alt="Dice Game"></a>
+                        <a href="dice.html" target="_blank"><img src="dice.png" alt="Dice Game"></a>
                         <figcaption>I made a Dice game.</figcaption>
                     </figure>
             
                     <figure>
-                        <a href="sign_in3.html" target="_blank"><img src="sign_in3.html"  alt="Sign In form"></a>
+                        <a href="sign_in3.html" target="_blank"><img src="sign_in.png"  alt="Sign In form"></a>
                         <figcaption>I made a JavaScript sign-in form.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="soccer.html" target="_blank"><img src="soccer.html" alt="form to add soccer players"></a>
+                        <a href="soccer.html" target="_blank"><img src="soccer.png" alt="form to add soccer players"></a>
                         <figcaption>I created a form that can be used to add children to Soccer teams depending on age groups.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="blastoff.html" target="_blank"><img src="blastoff.html" alt="Rocket Blastoff"></a>
+                        <a href="blastoff.html" target="_blank"><img src="rocket.png" alt="Rocket Blastoff"></a>
                         <figcaption>I created a button on a web page that can be clicked. After it is clicked, there is a countdown and then the word "blastoff!" is shown.</figcaption>
                     </figure>
             
