--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -38,25 +38,24 @@
     <!--Use the main area to add the main content of the webpage-->
     <main>
         <div class="mobile">
-            <p>I completed the Learning Path "Become a Front-End Web Developer" on LinkedIn Learning in August 2020.
-            I made an Analog Clock and a Typing Speed Tester using the scripting language JavaScript as part of the "JavaScript Essential Training" course. I organized products into categories and added product descriptions in the "jQuery Essential Training" course. In order to add a description to each product, I had to use AJAX which stands for Asynchronous JavaScript and XML. I took a 1-hour Course on React.js, which is the JavaScript framework for building modular, reusable user interface components. In December 2019, I completed "UX & Web Design Master Course: Strategy, Design, Development" on the Udemy website. I learned about HTML and CSS. I used WordPress and WooCommerce to make a Blog website and an eCommerce website.</p>
+            <p>I made a JavaScript Dice game and a sign-in form. I created a form to add children of various age groups to Soccer teams and a Rocket Blastoff web page.</p>
         </div>
     
 
         <div class="grid tablet-desktop">
                     <figure>
                         <a href="dice.html" target="_blank"><img src="dice.png" alt="Dice Game"></a>
-                        <figcaption>I made a Dice game.</figcaption>
+                        <figcaption>I made a JavaScript Dice game.</figcaption>
                     </figure>
             
                     <figure>
                         <a href="sign_in3.html" target="_blank"><img src="sign_in.png"  alt="Sign In form"></a>
-                        <figcaption>I made a JavaScript sign-in form.</figcaption>
+                        <figcaption>I made a sign-in form.</figcaption>
                     </figure>
 
                     <figure>
                         <a href="soccer.html" target="_blank"><img src="soccer.png" alt="form to add soccer players"></a>
-                        <figcaption>I created a form that can be used to add children to Soccer teams depending on age groups.</figcaption>
+                        <figcaption>I created a form to add children of various age groups to Soccer teams.</figcaption>
                     </figure>
 
                     <figure>
