--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -4,7 +4,7 @@
      Date: 09/02/2021-->
 <html lang="en">
 <head>
-    <title>Work</title>
+    <title>JavaScript</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,22 +44,22 @@
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="dice.html" target="_blank"><img src="dice.png" alt="Dice Game"></a>
+                        <a href="dice.html" target="_blank"><img src="dice.png" width="20%" height="20%" alt="Dice Game"></a>
                         <figcaption>I made a JavaScript Dice game.</figcaption>
                     </figure>
             
                     <figure>
-                        <a href="sign_in3.html" target="_blank"><img src="sign_in.png"  alt="Sign In form"></a>
+                        <a href="sign_in3.html" target="_blank"><img src="sign_in.png" width="20%" height="20%" alt="Sign In form"></a>
                         <figcaption>I made a sign-in form.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="soccer.html" target="_blank"><img src="soccer.png" alt="form to add soccer players"></a>
+                        <a href="soccer.html" target="_blank"><img src="soccer.png" width="20%" height="20%" alt="form to add soccer players"></a>
                         <figcaption>I created a form to add children of various age groups to Soccer teams.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="blastoff.html" target="_blank"><img src="rocket.png" alt="Rocket Blastoff"></a>
+                        <a href="blastoff.html" target="_blank"><img src="rocket.png" width="20%" height="20%" alt="Rocket Blastoff"></a>
                         <figcaption>I created a button on a web page that can be clicked. After it is clicked, there is a countdown and then the word "blastoff!" is shown.</figcaption>
                     </figure>
             
