--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -42,7 +42,7 @@
              I made a fictional Doctor Who website similar to the Landscape website. The website included a list of Doctor Who's patients and their Medications.
              I created a form that asks the user for the user's name, age, and gender. The information entered is used to set cookies on the user's computer.</p>
     
-
+         </div>
         <div class="grid tablet-desktop">
                     <figure>
                         <a href="landscape.php" target="_blank"><img src="landscape.png" width="20%" height="40%" alt="Landscape database"></a>
