--- a/Portfolio/home.html
+++ b/Portfolio/home.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invasion Game</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css4/styles.css">
 </head>
 <body onload="createUFO()">
     <h1 class="score">The aliens are coming!!!</h1>
 
-    <script src="js/invasion.js"></script>
+    <script src="js4/invasion.js"></script>
 </body>
 </html>
