--- a/Portfolio/Mobile App.html
+++ b/Portfolio/Mobile App.html
@@ -40,8 +40,8 @@
         <div class="mobile">
             <p>I made this web page in my Mobile App class to keep track of the temperatures and pressures of a Boiler.
                In this Game, the user needs to click on the UFOs to destroy them.
-               The user clicks on the web page in order to swing the bat and hit the baseball in this game.
-                 </p>
+               Using jQuery, the user clicks on the page button in order to swing the bat and hit the baseball in this game.
+               I used Bootstrap in order to display the nine Skywalker Star Wars movies over three different pages in this Site.</p>
         </div>
     
 
@@ -58,12 +58,12 @@
 
                     <figure>
                         <a href="../Batter/home.html" target="_blank"><img src="baseball.png" width="20%" height="40%" alt="baseball and bat game"></a>
-                        <figcaption>The user clicks on the web page in order to swing the bat and hit the baseball in this game.</figcaption>
+                        <figcaption>Using jQuery, the user clicks on the page button in order to swing the bat and hit the baseball in this game.</figcaption>
                     </figure>
 
                     <figure>
-                        <a href="blastoff.html" target="_blank"><img src="rocket.png" width="20%" height="40%" alt="Rocket Blastoff"></a>
-                        <figcaption>I created a button on a web page that can be clicked. After it is clicked, there is a countdown and then the word "blastoff!" is shown.</figcaption>
+                        <a href="/Bootstrap/home.html" target="_blank"><img src="/Bootstrap/home.png" width="20%" height="40%" alt="Star Wars movies"></a>
+                        <figcaption>I used Bootstrap in order to display the nine Skywalker Star Wars movies over three different pages in this Site.</figcaption>
                     </figure>
             
         </div>
