--- a/Portfolio/Mobile App.html
+++ b/Portfolio/Mobile App.html
@@ -62,7 +62,7 @@
                     </figure>
 
                     <figure>
-                        <a href="/Bootstrap/home.html" target="_blank"><img src="/Bootstrap/home.png" width="20%" height="40%" alt="Star Wars movies"></a>
+                        <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/home.png" width="20%" height="40%" alt="Star Wars movies"></a>
                         <figcaption>I used Bootstrap in order to display the nine Skywalker Star Wars movies over three different pages in this Site.</figcaption>
                     </figure>
             
