--- a/Portfolio/Mobile App.html
+++ b/Portfolio/Mobile App.html
@@ -63,7 +63,7 @@
 
                     <figure>
                         <a href="Bootstrap/home.html" target="_blank"><img src="Bootstrap/home.png" width="20%" height="40%" alt="Star Wars movies"></a>
-                        <figcaption>I used Bootstrap in order to display the nine Skywalker Star Wars movies over three different pages in this Site.</figcaption>
+                        <figcaption>I used Bootstrap in order to display the nine Skywalker Saga Star Wars movies over three different pages in this Site.</figcaption>
                     </figure>
             
         </div>
