--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -28,9 +28,9 @@
    <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="dice.html">JavaScript</a></li>
-            <li><a href="cookies.html">PHP</a></li>
-            <li><a href="multipage.html">Mobile App</a></li>
+            <li><a href="JavaScript.html">JavaScript</a></li>
+            <li><a href="PHP.html">PHP</a></li>
+            <li><a href="Mobile App.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
