--- a/Portfolio/Mobile App.html
+++ b/Portfolio/Mobile App.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Student Name: Aaron Jazzar 
-     File Name: JavaScript.html
-     Date: 09/02/2021-->
+     File Name: Mobile App.html
+     Date: 09/03/2021-->
 <html lang="en">
 <head>
-    <title>JavaScript</title>
+    <title>Mobile App</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles2.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
