--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -19,7 +19,7 @@
     <!--Use the header area for the website name or logo-->
     <header>
         <figure>
-            <figcaption><h1>Aaron Jazzar, Web Developer</h1></figcaption>
+            <h1>Aaron Jazzar, Web Developer</h1>
         </figure>
     </header>
 
