--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,7 +19,7 @@
     <!--Use the header area for the website name and a Photograph-->
     <header>
         <figure>
-            <figcaption><h1>Aaron Jazzar, Web Developer</h1></figcaption>
+             <h1>Aaron Jazzar, Web Developer</h1>
         </figure>
     </header>
     <!--Use the nav area to add hyperlinks to other pages within the website-->
