--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -41,7 +41,7 @@
                 <h2>Aaron's Contact Info</h2>
                 <p class="tablet-desktop">(704) 441-0644</p>
                     <p>Email: <a href="mailto:ajazzar001@my.wilmu.edu" class="contact-email-link">ajazzar001@my.wilmu.edu</a></p>
-                 <p>LinkedIn profile: <a href="www.linkedin.com/in/aaron-jazzar-282aa17b">Please click here.</a></p>
+                 <p>LinkedIn profile: <a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b" target="_blank">Please click here.</a></p>
                 </div>
             </div>
         </div>
