--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -37,25 +37,31 @@
     <!--Use the main area to add the main content of the webpage-->
     <main>
         <div class="mobile">
-             <p>I made a fictional Landscape website using PHP and mySQL. The website can also be used to generate emails to customers.
-             I made a fictional Doctor Who website similar to the Landscape website. The website included a list of Doctor Who's patients and their Medications.
-             I created a form that asks the user for the user's name, age, and gender. The information entered is used to set cookies on the user's computer.</p>
+             <p>I made a Landscape website in my PHP class. I created a PHP page that extracts a customer’s bill amount and the amount paid. Then it calculates the amount due. 
+             If the amount due is greater than 0, an email is generated and sent to the customer with that amount in the message. If the amount due is zero or there is a credit, a thank-you email is generated that thanks 
+            the customer for his or her payment.
+            I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
+            Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.
+             I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</p>
     
          </div>
         <div class="grid tablet-desktop">
                     <figure>
                         <a href="landscape.php" target="_blank"><img src="landscape.png" width="20%" height="40%" alt="Landscape database"></a>
-                        <figcaption>I made a fictional Landscape website using PHP and mySQL. The website can also be used to generate emails to customers.</figcaption>
+                        <figcaption>I made a Landscape website in my PHP class. I created a PHP page that extracts a customer’s bill amount and the amount paid. Then it calculates the amount due. 
+                             If the amount due is greater than 0, an email is generated and sent to the customer with that amount in the message. If the amount due is zero or there is a credit, a thank-you email is generated that thanks 
+                             the customer for his or her payment.</figcaption>
                     </figure>
             
                     <figure>
                         <a href="doctorWho.php" target="_blank"><img src="doctorWho.png" width="20%" height="40%" alt="Doctor Who database"></a>
-                        <figcaption>I made a fictional Doctor Who website similar to the Landscape website. The website included a list of Doctor Who's patients and their Medications.</figcaption>
+                        <figcaption>I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
+                         Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.</figcaption>
                     </figure>
 
                     <figure>
                         <a href="cookies.html" target="_blank"><img src="cookies.png" width="20%" height="40%" alt="form that adds cookies to computer"></a>
-                        <figcaption>I created a form that asks the user for the user's name, age, and gender. The information entered is used to set cookies on the user's computer.</figcaption>
+                        <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
                     </figure>
         </div>
     </main>
