--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -42,7 +42,9 @@
             the customer for his or her payment.
             I made a fictional Doctor Who website. I created a database named doctorWho. Then I created a page that allows Doctor Who’s assistant to add a new patient record.
             Then, I made a page that displays three or more fields from each of the patient records added. The patient’s first and last names and a unique identifier along with other information are displayed on that page.
-             I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</p>
+             I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.
+             I created a page that contains an array of about 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).
+             </p>
     
          </div>
         <div class="grid tablet-desktop">
@@ -62,6 +64,10 @@
                     <figure>
                         <a href="cookies.html" target="_blank"><img src="cookies.png" width="20%" height="40%" alt="form that adds cookies to computer"></a>
                         <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
+                    </figure>
+                    <figure>
+                        <a href="week2/title_hints.php" target="_blank"><img src="book.jpg" width="20%" height="40%" alt="form that adds cookies to computer"></a>
+                        <figcaption>I created a page that contains an array of about 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).</figcaption>
                     </figure>
         </div>
     </main>
