--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -67,7 +67,7 @@
                         <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
                     </figure>
                     <figure>
-                        <a href="week 2/title_hints.php" target="_blank"><img src="book.jpg" width="20%" height="40%" alt="form that adds cookies to computer"></a>
+                        <a href="week 2/title_hints.php" target="_blank"><img src="book.jpg" width="20%" height="40%" alt="book title array"></a>
                         <figcaption>I created a page that contains an array of about 20 book titles. The page has an input box for the user to enter the title and, as the user continues typing, the page displays all possible matches (i.e., hints).</figcaption>
                     </figure>
         </div>
