--- a/Portfolio/Mars/Mars.html
+++ b/Portfolio/Mars/Mars.html
@@ -30,13 +30,13 @@
 <div class="divTitle">Mars Today</div>
 <div class="marsNow planet">
     <a id="lnkMarsNow">
-        <img src="images/mars.png" class="imgMars">
+        <img src="Images/mars.png" class="imgMars">
     </a>
 </div>
 
 <div class="marsThen planet" style="display: none;">
     <a id="lnkMarsThen">
-        <img src="images/ancientMars.png" class="imgMars">
+        <img src="Images/ancientMars.png" class="imgMars">
     </a>
 
 </div>
