--- a/Portfolio/Bootstrap/page1.html
+++ b/Portfolio/Bootstrap/page1.html
@@ -43,7 +43,7 @@
       </nav> 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Star Wars Original Trilogy</h1>
-  <p><img src="images/SWoriginal.jpg" class="img-fluid" alt="photo of the Trilogy Movie Case"></p> 
+  <p><img src="Images/SWoriginal.jpg" class="img-fluid" alt="photo of the Trilogy Movie Case"></p> 
 </div>
 
 <div class="container">
