--- a/Portfolio/Bootstrap/page2.html
+++ b/Portfolio/Bootstrap/page2.html
@@ -43,7 +43,7 @@
       </nav> 
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Star Wars Prequel Trilogy</h1>
-  <p><img src="images/SWprequel.jpg" class="img-fluid" alt="photo of the Trilogy Movie Case"></p> 
+  <p><img src="Images/SWprequel.jpg" class="img-fluid" alt="photo of the Trilogy Movie Case"></p> 
 </div>
 
 <div class="container">
