--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -63,7 +63,7 @@
                     </figure>
 
                     <figure>
-                        <a href="week_3/cookies.html" target="_blank"><img src="cookies.png" width="20%" height="40%" alt="form that adds cookies to computer"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_3" target="_blank"><img src="cookies.png" width="20%" height="40%" alt="form that adds cookies to computer"></a>
                         <figcaption>I created a form that requests the user for his or her name, age, and gender. The information entered is used to set cookies on the user's computer. The cookies then expire in a week.</figcaption>
                     </figure>
                     <figure>
