--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -49,7 +49,7 @@
          </div>
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_7" target="_blank"><img src="week_7/landscape.jpg" width="20%" height="40%" alt="image of tree"></a>
+                        <a href="https://github.com/ajazzar/ajazzar.github.io/tree/main/Portfolio/week_7" target="_blank"><img src="Portfolio/week_7/landscape.jpg" width="20%" height="40%" alt="image of tree"></a>
                         <figcaption>I made a Landscape website in my PHP class. I created a PHP page that extracts a customer’s bill amount and the amount paid. Then it calculates the amount due. 
                              If the amount due is greater than 0, an email is generated and sent to the customer with that amount in the message. If the amount due is zero or there is a credit, a thank-you email is generated that thanks 
                              the customer for his or her payment.</figcaption>
