--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -61,7 +61,7 @@
                     </figure>
 
                     <figure>
-                        <a href="soccer.html" target="_blank"><img src="soccer.jpg" width="20%" height="40%" alt="form to add soccer players"></a>
+                        <a href="soccer.html" target="_blank"><img src="soccer.jpg" width="20%" height="40%" alt="picture of soccer ball"></a>
                         <figcaption>I created a page that can be used to add children of various age groups to one of three Soccer Leagues: Junior, Intermediate, and Senior. 
                              The Junior League is for children ages 4–7, the Intermediate League is for children ages 8–11, and the Senior League is for children ages 12–15. </figcaption>
                     </figure>
