--- a/Portfolio/PHP.html
+++ b/Portfolio/PHP.html
@@ -29,7 +29,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="JavaScript.html">JavaScript</a></li>
             <li><a href="PHP.html">PHP</a></li>
-            <li><a href="Mobile App.html">Mobile App</a></li>
+            <li><a href="Mobile_App.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
