--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -29,7 +29,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="JavaScript.html">JavaScript</a></li>
             <li><a href="PHP.html">PHP</a></li>
-            <li><a href="Mobile App.html">Mobile App</a></li>
+            <li><a href="Mobile_App.html">Mobile App</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -39,9 +39,8 @@
         <div id="contact">
             <div id="info">
                 <h2>Aaron's Contact Info</h2>
-                <p class="tablet-desktop">(704) 441-0644</p>
                     <p>Email: <a href="mailto:ajazzar001@my.wilmu.edu" class="contact-email-link">ajazzar001@my.wilmu.edu</a></p>
-                 <p>LinkedIn profile: <a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank">Please click here.</a></p>
+                 <p>LinkedIn profile: <a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank"><img src="linkedin.jpg" width="20%" height="40%" alt="LinkedIn logo"></a></p>
                 </div>
             </div>
         </div>
