--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -40,7 +40,8 @@
             <div id="info">
                 <h2>Aaron's Contact Info</h2>
                     <p>Email: <a href="mailto:ajazzar001@my.wilmu.edu" class="contact-email-link">ajazzar001@my.wilmu.edu</a></p>
-                 <p>LinkedIn profile: <a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank"><img src="linkedin.jpg" width="10%" height="10%" alt="LinkedIn logo"></a></p>
+                 <p>LinkedIn profile: <br> 
+                      <a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank"><img src="linkedin.jpg" width="10%" height="10%" alt="LinkedIn logo"></a></p>
                 </div>
             </div>
         </div>
