--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -41,7 +41,7 @@
                 <h2>Aaron's Contact Info</h2>
                     <p>Email: <a href="mailto:ajazzar001@my.wilmu.edu" class="contact-email-link">ajazzar001@my.wilmu.edu</a></p>
                  <p>LinkedIn profile:</p>
-                      <p><a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank"><img src="linkedin.jpg" width="10%" height="10%" alt="LinkedIn logo"></a></p>
+                      <p align="middle"><a href="http://www.linkedin.com/in/aaron-jazzar-282aa17b/" target="_blank"><img src="linkedin.jpg" width="10%" height="10%" alt="LinkedIn logo"></a></p>
                 </div>
             </div>
         </div>
