--- a/Portfolio/JavaScript.html
+++ b/Portfolio/JavaScript.html
@@ -38,18 +38,18 @@
     <main>
         <div class="mobile">
             <p>I created a page that allows the user to play a game with the computer. In this game, the player rolls two dice and the computer rolls two dice. The Math.random() method is used to generate each roll of a die, from 1 to 6. 
-                The sum of the computer’s roll is compared to the sum of the player’s roll and whoever has the greater sum is the winner of that round.
-               I created an html sign-in page for a website. The page obtains the following information: the user’s first and last names, street address, city, state, zip code, email address, and phone number.
+                The sum of the computer’s roll is compared to the sum of the player’s roll and whoever has the greater sum is the winner of that round.</p><br>
+            <p>I created an html sign-in page for a website. The page obtains the following information: the user’s first and last names, street address, city, state, zip code, email address, and phone number.
                 I also added a username and password section. The username has to be between 4 and 20 characters. The password has to be between 4 and 12 characters, contain at least one digit, and contain at least one uppercase and one lowercase character. </p>
-               I created a page that can be used to add children of various age groups to one of three Soccer Leagues: Junior, Intermediate, and Senior. 
-               The Junior League is for children ages 4–7, the Intermediate League is for children ages 8–11, and the Senior League is for children ages 12–15
-               I created a button on a web page that can be clicked to starts a countdown. After the countdown is completed, the word "blastoff!" is shown.
+        <br><p>I created a page that can be used to add children of various age groups to one of three Soccer Leagues: Junior, Intermediate, and Senior. 
+               The Junior League is for children ages 4–7, the Intermediate League is for children ages 8–11, and the Senior League is for children ages 12–15.</p>
+        <br><p>I created a button on a web page that can be clicked to starts a countdown. After the countdown is completed, the word "blastoff!" is shown.</p>
          </div>
     
 
         <div class="grid tablet-desktop">
                     <figure>
-                        <a href="dice.html" target="_blank"><img src="dice.png" width="20%" height="40%" alt="Dice Game"></a>
+                        <a href="dice.html" target="_blank"><img src="dice.html" width="20%" height="40%" alt="Dice Game"></a>
                         <figcaption>I created a page that allows the user to play a game with the computer. In this game, the player rolls two dice and the computer rolls two dice. The Math.random() method is used to generate each roll of a die, from 1 to 6. 
                              The sum of the computer’s roll is compared to the sum of the player’s roll and whoever has the greater sum is the winner of that round. </figcaption>
                     </figure>
@@ -61,7 +61,7 @@
                     </figure>
 
                     <figure>
-                        <a href="soccer.html" target="_blank"><img src="soccer.jpg" width="20%" height="40%" alt="picture of soccer ball"></a>
+                        <a href="soccer.html" target="_blank"><img src="login.jpg" width="20%" height="40%" alt="picture of soccer ball"></a>
                         <figcaption>I created a page that can be used to add children of various age groups to one of three Soccer Leagues: Junior, Intermediate, and Senior. 
                              The Junior League is for children ages 4–7, the Intermediate League is for children ages 8–11, and the Senior League is for children ages 12–15. </figcaption>
                     </figure>
